--- a/views/forms.html
+++ b/views/forms.html
@@ -22,6 +22,8 @@
     var mailpoet_segments = <%= json_encode(segments) %>;
     var mailpoet_form_edit_url =
       "<%= admin_url('admin.php?page=mailpoet-form-editor&id=') %>";
+    var mailpoet_form_edit_url_v2 =
+            "<%= admin_url('admin.php?page=mailpoet-form-editor-v2&id=') %>";
     var mailpoet_beacon_articles = [
       '57fdb34a9033600277a69317',
       '58a718a6dd8c8e56bfa7cad6',
