--- a/assets/css/src/components/formEditor/style.scss
+++ b/assets/css/src/components/formEditor/style.scss
@@ -60,11 +60,6 @@
   }
 }
 
-.playground__header {
-  border-bottom: 1px solid #ddd;
-  padding: 20px;
-}
-
 .playground__logo {
   font-size: 20px;
   font-weight: 300;
@@ -77,7 +72,7 @@
     justify-content: space-between;
   }
   background: #fff;
-  padding-top: 20px;
+  margin-top: 20px;
 
   img {
     height: auto;
