--- a/views/form/editor_v2.html
+++ b/views/form/editor_v2.html
@@ -23,4 +23,5 @@
   var mailpoet_form_data = <%= json_encode(form) %>;
   <% endautoescape %>
 </script>
+<%= javascript('form_editor_v2.js')%>
 <% endblock %>
