--- a/assets/css/src/components/formEditor/_mixins.scss
+++ b/assets/css/src/components/formEditor/_mixins.scss
@@ -609,3 +609,19 @@
     width: auto;
   }
 }
+
+@mixin edit-post__loading-fade-animation() {
+  @keyframes edit-post__loading-fade-animation {
+    0% {
+      opacity: .5;
+    }
+
+    50% {
+      opacity: 1;
+    }
+
+    100% {
+      opacity: .5;
+    }
+  }
+}
