--- a/assets/css/src/formEditor.scss
+++ b/assets/css/src/formEditor.scss
@@ -1,7 +1,8 @@
 @import 'components/formEditor/style';
-@import '../../../node_modules/@wordpress/components/build-style/style.css';
-@import '../../../node_modules/@wordpress/block-editor/build-style/style.css';
-@import '../../../node_modules/@wordpress/block-library/build-style/style.css';
-@import '../../../node_modules/@wordpress/block-library/build-style/editor.css';
-@import '../../../node_modules/@wordpress/block-library/build-style/theme.css';
-@import '../../../node_modules/@wordpress/format-library/build-style/style.css';
+@import '../../../node_modules/@wordpress/components/src/style';
+@import '../../../node_modules/@wordpress/block-editor/src/style';
+@import '../../../node_modules/@wordpress/block-library/src/style';
+@import '../../../node_modules/@wordpress/block-library/src/editor';
+@import '../../../node_modules/@wordpress/block-library/src/theme';
+@import '../../../node_modules/@wordpress/format-library/src/style';
+
