--- a/views/old_settings.html
+++ b/views/old_settings.html
@@ -16,7 +16,7 @@
       <!-- tabs -->
       <h2 class="nav-tab-wrapper" id="mailpoet_settings_tabs">
         <a class="nav-tab" href="?page=mailpoet-new-settings#/basics" data-automation-id="basic_settings_tab"><%= __('Basics') %></a>
-        <a class="nav-tab" href="#signup" data-automation-id="signup_settings_tab"><%= __('Sign-up Confirmation') %></a>
+        <a class="nav-tab" href="?page=mailpoet-new-settings#signup" data-automation-id="signup_settings_tab"><%= __('Sign-up Confirmation') %></a>
         <a class="nav-tab" href="#mta" data-automation-id="send_with_settings_tab"><%= __('Send With...') %></a>
         <% if is_woocommerce_active %>
           <a class="nav-tab" href="?page=mailpoet-new-settings#/woocommerce" data-automation-id="woocommerce_settings_tab"><%= __('WooCommerce') %></a>
