--- a/views/settings.html
+++ b/views/settings.html
@@ -14,6 +14,7 @@
       var mailpoet_settings = <%= json_encode(settings) %>;
       var mailpoet_segments = <%= json_encode(segments) %>;
       var mailpoet_pages = <%= json_encode(pages) %>;
+      var mailpoet_paths = <%= json_encode(paths) %>;
     <% endautoescape %>
     var mailpoet_beacon_articles = [
       '57f71d49c697911f2d323486',
@@ -94,7 +95,7 @@
     'taskCron': __('Newsletter task scheduler (cron)'),
     'taskCronDescription': __('Select what will activate your newsletter queue.'),
     'websiteVisitors': __('Visitors to your website (recommended)'),
-    'mailPoetScript': __("MailPoet's own script. Doesn't work with [link]these hosts[/link]."),
+    'mailpoetScript': __("MailPoet's own script. Doesn't work with [link]these hosts[/link]."),
     'serverCron': __("Server side cron (Linux cron)"),
     'addCommandToCrontab': __("To use this option please add this command to your crontab:"),
     'withFrequency': __("With the frequency of running it every minute:"),
