Add fixed bar form settings
[MAILPOET-2740]

--- a/views/form/editor.html
+++ b/views/form/editor.html
@@ -59,6 +59,8 @@
   'customCss': _x('Custom CSS', 'A settings section heading'),
   'formSaved': __('Form saved.'),
   'customFieldSaved': __('Custom field saved.'),
+  'placeFixedBarFormOnPages': _x('Fixed bar', 'This is a text on a widget that leads to settings for form placement - form type is fixed bar'),
+  'placeFixedBarFormOnPagesDescription': __('Display your form in a fixed horizontal bar at the top or bottom of posts or pages.'),
   'placePopupFormOnPages': _x('Pop up', 'This is a text on a widget that leads to settings for form placement - form type is pop up, it will be displayed on page in a small modal window'),
   'placePopupFormOnPagesDescription': __('Display your form in a pop up window.'),
   'placeFormBellowPages': _x('Below pages', 'This is a text on a widget that leads to settings for form placement'),
