--- a/views/form/editor.html
+++ b/views/form/editor.html
@@ -68,6 +68,9 @@
   'placeFormBellowAllPages': _x('Display on all pages', 'This is a text on a switch if a form should be displayed bellow all pages'),
   'placeFormBellowAllPosts': _x('Display on all posts', 'This is a text on a switch if a form should be displayed bellow all posts'),
   'formPlacementDelay': _x('Display with a delay of', 'Label on a selection of different times'),
+  'formPlacementPlacementPosition': _x('Position', 'Placement of a fixed bar form, on top of the page or on the bottom'),
+  'formPlacementPlacementPositionTop': _x('top', 'Placement of a fixed bar form, on top of the page or on the bottom'),
+  'formPlacementPlacementPositionBottom': _x('bottom', 'Placement of a fixed bar form, on top of the page or on the bottom'),
   'formPlacementDelaySeconds': _x('%1s sec', 'times selection should be in the end "30 sec"'),
   'formPlacementSave': _x('Save', 'Text on a button to save a form'),
   'addFormWidgetHint': __('Add this form to a [link]widget area[/link].'),
