Add Bounce email field

--- a/views/settings.html
+++ b/views/settings.html
@@ -91,6 +91,8 @@
 
     'invalidEmail': __('Invalid email address'),
 
+    'bounceEmail': __('Bounce email address'),
+    'yourBouncedEmails': __('Your bounced emails will be sent to this address.'),
     'readMore': _x('Read more.', 'support article link label'),
     'taskCron': __('Newsletter task scheduler (cron)'),
     'taskCronDescription': __('Select what will activate your newsletter queue.'),
