--- a/views/form/front_end_form.html
+++ b/views/form/front_end_form.html
@@ -27,6 +27,7 @@
       novalidate
       style="<%= form_element_styles %>"/* paragraphs (label + input)
       data-delay="<%= delay %>"
+      data-position="<%= position %>"
       data-background-color="<%= backgroundColor %>"
     >
       <input type="hidden" name="data[form_id]" value="<%= form_id %>" />
